Add model.api.meta.{Declared,Effective}HumanTextStatement
We have 5 base statement whose argument amounts to text which is to be
presented to a human:
- contact
- description
- error-message
- organization
- reference

Add a common meta capture of this trait and migrate corresponding
StatementDefinitions.

JIRA: YANGTOOLS-1739
Change-Id: I442fd580c6ae8f657edadf5f5240d50fce774b8c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>